--- a/style/Style.css
+++ b/style/Style.css
@@ -1,9 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900|Dosis:300,400,600,700,800|Droid+Sans:400,700|Lato:300,400,700,900|PT+Sans:400,700|Ubuntu:300,400,500,700|Open+Sans:400,300,600,700|Roboto:400,300,500,700,900|Roboto+Condensed:400,300,700|Open+Sans+Condensed:300,700|Work+Sans:400,300,700|Play:400,700|Maven+Pro:400,500,700,900&subset=latin,latin-ext);
-* {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
 
 :root {
   --main-red-color: #a90e10;
@@ -72,7 +67,7 @@ header {
     left: -2rem;
     top: 5rem;
     bottom: 0rem;
-    width: 100%;
+    max-width: 18rem;
     display: -webkit-flex;
     display: flex;
   }
@@ -85,16 +80,21 @@ header {
     list-style: none;
   }
   .container .navbar ul li {    
+    text-decoration:none; 
     border-bottom: 1px solid #343841;
     padding: 1.5rem;
     font-size: 1.2rem;
     cursor: pointer;
-    color: black;
     -moz-transition: border-left 0.2s linear, color 0.2s linear;
     -o-transition: border-left 0.2s linear, color 0.2s linear;
     -webkit-transition: border-left 0.2s linear, color 0.2s linear;
     transition: border-left 0.2s linear, color 0.2s linear;
   }
+  .navbar ul li a:hover, .navbar ul li a:focus, .navbar ul li a:active{
+    text-decoration: none;
+    color: inherit;
+}
+  
   .container .navbar ul li:hover {
     color: red;
     border-left: 4px solid var(--main-red-color);
@@ -102,5 +102,17 @@ header {
   .container .navbar ul li.active, .container .navbar ul li:active {
     color: red;
     text-shadow: 0 0 20px var(--main-red-color);
-    border-left: 4px solid var(--main-red-color);\
+    border-left: 4px solid var(--main-red-color);
+  }
+  
+  .container .navbar ul a:hover, .container .navbar ul a:active,.container .navbar ul a:focus, .container .navbar ul a:visited{
+    text-decoration: none;
+    color: inherit;
+  }
+
+  .conteudo{
+    max-width: 80rem;
+    top: 9rem;
+    position: absolute;
+    left: 20rem;
   }
